rendimiento de imagenes y adicion de email

--- a/index.html
+++ b/index.html
@@ -531,7 +531,9 @@
   <!-- <SENDEMAIL> -->
   <div class="container contaier-send-email">
     <div class="send-email row px-5 text-center">
-      <h1 class="send-email__title1 my-3">Let's work together</h1>
+      <h1 class="send-email__title1 my-3">Let's work together:
+        <img src="./assets/email.png" alt="email">
+      </h1>
 
       <form class="send-email__form mb-5 px-0 d-flex flex-column align-items-center"
         action="mailto:elkincrf.dev@gmail.com" method="post" enctype="text/plain">
@@ -609,7 +611,7 @@
           </li>
 
           <li class="footer-a__ul__li-a" id="links-a">
-            <a class="footer-a__ul__li-a__link" href="" target="_blank">
+            <a class="footer-a__ul__li-a__link" href="https://github.com/cromofuego/elkin-web" target="_blank">
               <p class="mb-0">CODE THIS PAGE</p>
             </a>
           </li>
