--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
           </div>
         </div>
 
-        <a class="card-header-a__button-cv" href="./assets/elkin-cv.pdf" target="_blank">
-          <button class="card-header-a__button-cv__btn">Download CV</button>
+        <a class="card-header-a__button-cv card-header-a__button-cv__btn" href="./assets/elkin-cv.pdf" download>
+          Download CV
         </a>
 
       </div>
