descargar cv y deploy

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
           </div>
         </div>
 
-        <a class="card-header-a__button-cv card-header-a__button-cv__btn" href="./assets/elkin-cv.pdf" download>
+        <a class="card-header-a__button-cv card-header-a__button-cv__btn" href="./assets/elkin-cv.pdf"
+          download="elkin-cv">
           Download CV
         </a>
 
@@ -241,7 +242,7 @@
         </p>
 
         <p class="px-5">
-          Almacenamiento de información financiera para un auditor manteniéndola actualizaba para que siempre tuviera la
+          Almacenamiento de información financiera para un auditor manteniéndola actualizada para que siempre tuviera la
           información más reciente a su alcance para la toma de decisiones en la compañía.
         </p>
 
