--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
         </div>
 
         <a class="card-header-a__button-cv card-header-a__button-cv__btn" href="./assets/elkin-cv.pdf"
-          download="elkin-cv">
+          download="elkin-cv.pdf">
+          <img src="./assets/elkin-cv.pdf" style="display: none;" />
           Download CV
         </a>
 
