--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
           </div>
         </div>
 
-        <a class="card-header-a__button-cv card-header-a__button-cv__btn" href="./assets/elkin-cv.pdf"
-          download="elkin-cv.pdf">
-          <img src="./assets/elkin-cv.pdf" style="display: none;" />
+        <a class="card-header-a__button-cv card-header-a__button-cv__btn" src="./assets/elkin-cv.pdf"
+          href="./assets/elkin-cv.pdf" download="elkin-cv.pdf">
+          <img src="./assets/elkin-cv.pdf" style="display: none;" class="src-pdf-file" />
           Download CV
         </a>
 
@@ -632,6 +632,7 @@
   <script type="module" src="/textAnimation.js"></script>
   <script type="module" src="/scrollSpy.js"></script>
   <script type="module" src="/rippleEffect.js"></script>
+  <script type="module" src="/pdfFileSrc.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
