--- a/es/spanish.html
+++ b/es/spanish.html
@@ -23,9 +23,9 @@
 <body class="">
   <canvas id="canvasBackground"></canvas>
 
-  <a href="#switch-language" class="arrow-up">
+  <button class="arrow-up">
     <i class="fa-sharp fa-solid fa-arrow-up"></i>
-  </a>
+  </button>
 
   <!-- BUTTON NAVBAR -->
   <button class="btn-nabvar-a">
