--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
             <img src="./assets/elkin-cv.pdf" style="display: none;" class="src-pdf-file" />
             Download CV
           </a>
-          <a class="card-header-a__button-cv card-header-a__button-cv__btn tager-spanish" src="../assets/elkin-cv.pdf"
+          <a class="card-header-a__button-cv card-header-a__button-cv__btn tager-spanish" src="./assets/elkin-cv.pdf"
             href="./dist/assets/elkin-cv.d8898e81.pdf" download="elkin-cv.pdf">
-            <img src="../assets/elkin-cv.pdf" style="display: none;" class="src-pdf-file" />
+            <img src="./assets/elkin-cv.pdf" style="display: none;" class="src-pdf-file" />
             Descargar HV
           </a>
 
