--- a/index.html
+++ b/index.html
@@ -167,12 +167,12 @@
           </div>
 
           <a class="card-header-a__button-cv card-header-a__button-cv__btn target-english" src="./assets/elkin-cv.pdf"
-            href="./dist/assets/elkin-cv.d8898e81.pdf" download="elkin-cv.pdf">
+            href="./dist/assets/elkin-cv.d8898e81.pdf" download="./dist/assets/elkin-cv.d8898e81.pdf">
             <img src="./assets/elkin-cv.pdf" style="display: none;" class="src-pdf-file" />
             Download CV
           </a>
           <a class="card-header-a__button-cv card-header-a__button-cv__btn tager-spanish" src="./assets/elkin-cv.pdf"
-            href="./dist/assets/elkin-cv.d8898e81.pdf" download="elkin-cv.pdf">
+            href="./dist/assets/elkin-cv.d8898e81.pdf" download="./dist/assets/elkin-cv.d8898e81.pdf">
             <img src="./assets/elkin-cv.pdf" style="display: none;" class="src-pdf-file" />
             Descargar HV
           </a>
