--- a/index.html
+++ b/index.html
@@ -39,43 +39,74 @@
     <!-- <NAVBAR> -->
     <nav class="navbar-a" id="nabvar-a">
       <ul class="navbar-a__ul">
-        <li class="navbar-a__ul__li-a" id="links-a">
+        <li class="navbar-a__ul__li-a target-english" id="links-a">
           <a class="navbar-a__ul__li-a__link-icon d-flex flex-column align-items-center" href="#section1">
             <i class="fas fa-user-edit"></i>
-            <p class="mb-0 text-center mt-2 target-english">About me</p>
-            <p class="mb-0 text-center mt-2 tager-spanish">Acerca de mi</p>
+            <p class="mb-0 text-center mt-2">About me</p>
           </a>
         </li>
 
-        <li class="navbar-a__ul__li-a" id="links-a">
+        <li class="navbar-a__ul__li-a tager-spanish" id="links-a">
+          <a class="navbar-a__ul__li-a__link-icon d-flex flex-column align-items-center" href="#section1-spanish">
+            <i class="fas fa-user-edit"></i>
+            <p class="mb-0 text-center mt-2">Acerca de mi</p>
+          </a>
+        </li>
+        <!-- --- -->
+        <li class="navbar-a__ul__li-a target-english" id="links-a">
           <a class="navbar-a__ul__li-a__link-icon d-flex flex-column align-items-center" href="#section2">
             <i class="fas fa-user-graduate"></i>
-            <p class="mb-0 text-center mt-2 target-english">Education</p>
-            <p class="mb-0 text-center mt-2 tager-spanish">Educación</p>
+            <p class="mb-0 text-center mt-2">Education</p>
           </a>
         </li>
 
-        <li class="navbar-a__ul__li-a" id="links-a">
+        <li class="navbar-a__ul__li-a tager-spanish" id="links-a">
+          <a class="navbar-a__ul__li-a__link-icon d-flex flex-column align-items-center" href="#section2-spanish">
+            <i class="fas fa-user-graduate"></i>
+            <p class="mb-0 text-center mt-2">Educación</p>
+          </a>
+        </li>
+        <!-- --- -->
+        <li class="navbar-a__ul__li-a target-english" id="links-a">
           <a class="navbar-a__ul__li-a__link-icon d-flex flex-column align-items-center" href="#section3">
             <i class="fas fa-user-clock"></i>
-            <p class="mb-0 text-center mt-2 target-english">Experiencie</p>
-            <p class="mb-0 text-center mt-2 tager-spanish">Experiencia</p>
+            <p class="mb-0 text-center mt-2">Experiencie</p>
           </a>
         </li>
 
-        <li class="navbar-a__ul__li-a" id="links-a">
+        <li class="navbar-a__ul__li-a tager-spanish" id="links-a">
+          <a class="navbar-a__ul__li-a__link-icon d-flex flex-column align-items-center" href="#section3-spanish">
+            <i class="fas fa-user-clock"></i>
+            <p class="mb-0 text-center mt-2">Experiencia</p>
+          </a>
+        </li>
+        <!-- --- -->
+        <li class="navbar-a__ul__li-a target-english" id="links-a">
           <a class="navbar-a__ul__li-a__link-icon d-flex flex-column align-items-center" href="#section4">
             <i class="fas fa-user-check"></i>
-            <p class="mb-0 text-center me-3 mt-2 target-english">Skills</p>
-            <p class="mb-0 text-center mt-2 tager-spanish">Habilidades</p>
+            <p class="mb-0 text-center me-3 mt-2">Skills</p>
           </a>
         </li>
 
-        <li class="navbar-a__ul__li-a" id="links-a">
+        <li class="navbar-a__ul__li-a tager-spanish" id="links-a">
+          <a class="navbar-a__ul__li-a__link-icon d-flex flex-column align-items-center" href="#section4-spanish">
+            <i class="fas fa-user-check"></i>
+            <p class="mb-0 text-center mt-2">Habilidades</p>
+          </a>
+        </li>
+        <!-- --- -->
+
+        <li class="navbar-a__ul__li-a target-english" id="links-a">
           <a class="navbar-a__ul__li-a__link-icon d-flex flex-column align-items-center" href="#section5">
             <i class="fas fa-scroll"></i>
-            <p class="mb-0 text-center mt-2 target-english">Projects</p>
-            <p class="mb-0 text-center mt-2 tager-spanish">Proyectos</p>
+            <p class="mb-0 text-center mt-2">Projects</p>
+          </a>
+        </li>
+
+        <li class="navbar-a__ul__li-a tager-spanish" id="links-a">
+          <a class="navbar-a__ul__li-a__link-icon d-flex flex-column align-items-center" href="#section5-spanish">
+            <i class="fas fa-scroll"></i>
+            <p class="mb-0 text-center mt-2">Proyectos</p>
           </a>
         </li>
 
@@ -190,7 +221,7 @@
           <h1 class="container-title__title header-section" id="section1">About me</h1>
         </div>
         <div class="container-title">
-          <h1 class="container-title__title header-section tager-spanish" id="section1">Acerca de mi</h1>
+          <h1 class="container-title__title header-section tager-spanish" id="section1-spanish">Acerca de mi</h1>
         </div>
 
         <div class="col section-card__col target-english">
@@ -253,7 +284,7 @@
           <h1 class="container-title__title header-section target-english" id="section2">Education</h1>
         </div>
         <div class="container-title">
-          <h1 class="container-title__title header-section tager-spanish" id="section2">Educación</h1>
+          <h1 class="container-title__title header-section tager-spanish" id="section2-spanish">Educación</h1>
         </div>
 
 
@@ -335,7 +366,7 @@
         </div>
 
         <div class="container-title tager-spanish">
-          <h1 class="container-title__title header-section" id="section3">Experiencia</h1>
+          <h1 class="container-title__title header-section" id="section3-spanish">Experiencia</h1>
         </div>
 
         <div class="col section-card__section-3-col target-english">
@@ -397,7 +428,7 @@
           <h1 class="container-title__title header-section" id="section4">Skills</h1>
         </div>
         <div class="container-title tager-spanish">
-          <h1 class="container-title__title header-section" id="section4">Habilidades</h1>
+          <h1 class="container-title__title header-section" id="section4-spanish">Habilidades</h1>
         </div>
         <!-- here down removed the align item center  -->
         <div class="div">
@@ -577,7 +608,7 @@
           <h1 class="container-title__title header-section" id="section5">Projects</h1>
         </div>
         <div class="container-title tager-spanish">
-          <h1 class="container-title__title header-section" id="section5">Proyectos</h1>
+          <h1 class="container-title__title header-section" id="section5-spanish">Proyectos</h1>
         </div>
 
         <div class="col section-card__section-5-col">
