arreglo btns responsive

--- a/index.html
+++ b/index.html
@@ -802,19 +802,23 @@
             </label>
           </div>
 
-          <div class="w-100 send-email__form__buttons my-5">
-            <button type="submit" class="send-email__form__buttons__btn mx-3 target-english">Send
-            </button>
-            <button type="submit" class="send-email__form__buttons__btn mx-3 tager-spanish mb-4">Enviar
+          <div class="w-100 send-email__form__buttons my-5 target-english">
+            <button type="submit" class="send-email__form__buttons__btn mx-3 mb-5">Send
             </button>
 
-            <button type="reset" class="send-email__form__buttons__btn mx-3 target-english">
+            <button type="reset" class="send-email__form__buttons__btn mx-3 mb-5">
               Reset
             </button>
-            <button type="reset" class="send-email__form__buttons__btn mx-3 tager-spanish mt-4">
+          </div>
+
+          <div class="w-100 send-email__form__buttons my-5 tager-spanish">
+            <button type="submit" class="send-email__form__buttons__btn mx-3">Enviar
+            </button>
+            <button type="reset" class="send-email__form__buttons__btn mx-3">
               Limpiar
             </button>
           </div>
+
         </form>
       </div>
     </div>
