algo de ortografia

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                   <ul class="px-3 tager-spanish">
                     <li class="mt-2">✔️ Empático</li>
                     <li class="mt-2">✔️ Curioso</li>
-                    <li class="mt-2">✔️ Diciplinado</li>
+                    <li class="mt-2">✔️ Disciplinado</li>
                     <li class="mt-2">✔️ Responsable</li>
                     <li class="mt-2">✔️ Trabajo en equipo</li>
                     <li class="mt-2">✔️ Adaptabilidad</li>
@@ -226,50 +226,48 @@
 
         <div class="col section-card__col target-english">
           <p class="px-5 py-3">
-            I owe the discipline and level of commitment that I have to my passion for the sport because I was in
-            many athletic competitions. That is why I have achieve to learn things that I am passionate about and have
-            fun
-            as
-            been programming. I am a curious person who is always looking for new things that can be done in the
-            world of technology and if it is possible to implement them in my work.
+            The discipline and level of commitment that I have I owe to my passion for sport, for that these years
+            that I have in the world of technology I have had an exponential growth, learning the things that I feel
+            passiont about
+            and enjoing all that, as programming has been, also I am a curious person who is always
+            looking at new things that can be done in the world of technology and if it is possible to implement them in
+            my
+            job.
           </p>
           <p class="px-5 py-3">
-            In teamwork I like to empathize, give my opinion, but also listen to feedback
-            of others towards me, because that has allowed me to grow much more. I am a person who accepts challenges
+            In teamwork I like to empathize, give my opinion, but also listen the feedback, because that has allowed me
+            to grow much more. I am a person who accepts challenges
             with
-            better attitude and learning from their mistakes. Although I don't know everything but you can be sure that
+            better attitude and learning from their mistakes. Although I don't know everything but, you can be sure that
             I
             will be able to adapt
             to situations that arise and acquire new knowledge to provide the best user experience.
           </p>
           <p class="px-5 py-3">
             In my free time I like to do exercise, play the piano, spend time with my family, walk to the
-            pet, video games, reading and learning a different foreign language.
+            pet, play video games, reading and learn a new foreign language.
           </p>
 
         </div>
 
         <div class="col section-card__col tager-spanish">
           <p class="px-5 py-3">
-            La disciplinada y el nivel de compromiso que tengo se lo debo a mi pasión por el deporte ya que estuve en
-            muchas competencias de atletismo. Por eso he logrado aprender cosas que me apasiona y divierten como lo ha
-            sido la programación. Soy una persona curiosa que siempre está mirando cosas nuevas que se pueden hacer en
-            el
-            mundo de la tecnología y si es posible implementarlas en mi trabajo.
+            La disciplina y el nivel de compromiso que tengo se lo debo a mi pasión por el deporte, por esto estos años
+            que tengo en el mundo de la tecnología he tenido un crecimiento exponencial, aprendiendo las cosas que me
+            apasionan y divierten como lo ha sido la programación, además soy una persona curiosa que siempre está
+            mirando cosas nuevas que se pueden hacer en el mundo de la tecnología y si es posible implementarlas en mi
+            trabajo.
           </p>
           <p class="px-5 py-3">
             En los trabajos de equipo me gusta empatizar, aportar mi opinión, pero así mismo también escuchar el
-            feedback
-            de los demás hacia mí porque eso me ha permitido crecer mucho más. Soy una persona que acepta los retos
-            con
-            la
-            mejor actitud y que aprende de sus errores. Aunque no lo se todo puedes estar seguro de que me podré
-            adaptarme
-            a las situaciones que surjan y adquirir nuevos conocimientos para brindar la mejor experiencia al usuario.
+            feedback de los demás, porque eso me ha permitido crecer aún más. Soy una persona que acepta los retos con
+            la mejor actitud y que aprende de sus errores. Aunque no lo sé todo puedes estar seguro de que podré
+            adaptarme a las situaciones que surjan y adquirir nuevos conocimientos para brindar la mejor experiencia al
+            usuario.
           </p>
           <p class="px-5 py-3">
-            En mi tiempo libre me gusta hacer ejercicio, tocar el piano, compartir en familia, pasear a la
-            mascota, video juegos, leer y aprender un lenguaje extranjero diferente.
+            En mi tiempo libre me gusta hacer ejercicio, tocar el piano, compartir en familia, pasear a la mascota,
+            jugar video juegos, leer y aprender un lenguaje extranjero.
           </p>
 
         </div>
@@ -291,29 +289,23 @@
         <div class="col-12 section-card__section-2-col col-md-6 card-photo target-english">
           <p class="px-5 py-3">
             Everything I have learned has been by myself, reading the official documentation of the technology or
-            framework
-            that I want to use, in addition to the knowledge of the people and colleagues with whom I have had the
-            opportunity to
-            to share.
+            framework that I want to use, in addition to the knowledge of the people and colleagues with whom I have had
+            the opportunity to share.
           </p>
           <p class="px-5 py-3">
-            I also continuously take courses on different educational platforms in the technologies that I am passionate
-            about.
-            such as Javascript and those that make me curious.
+            I also continuously take courses on different educational platforms, in the technologies that I am
+            passionate about. such as Javascript and those that make me curious.
         </div>
 
         <div class="col-12 section-card__section-2-col col-md-6 card-photo tager-spanish">
           <p class="px-5 py-3">
             Todo lo que he aprendido ha sido por mi cuenta, leyendo la documentación oficial de la tecnología o
-            framwork
-            que quiero usar, además del conocimiento de las personas y compañeros con los que he tenido la oportunidad
-            de
-            compartir.
+            framework que quiero usar, además del conocimiento de las personas y compañeros con los que he tenido la
+            oportunidad de compartir.
           </p>
           <p class="px-5 py-3">
-            También realizo continuamente cursos en diferentes plataformas educativas en las tecnologías que me
-            apasionan
-            como lo es Javascript y las que me generan curiosidad.
+            También realizo continuamente cursos en diferentes plataformas educativas, en las tecnologías que me
+            apasionan como lo es Javascript y las que me generan curiosidad.
         </div>
 
         <div class="col-12 col-md-6 d-flex align-items-center">
@@ -380,7 +372,7 @@
           </p>
 
           <p class="px-5">
-            build of a sales system for typical food products from Antioquia, storing all the
+            Build of a sales system for typical food products from Antioquia, storing all the
             information to generate the customer's receipt, as well as for the seller to have the information of the
             process and follow up.
           </p>
@@ -435,10 +427,10 @@
           <div class="col section-car__section-4-col target-english">
             <p class="px-5 py-3 mb-0">
               My greatest skill is with React and its respective hooks like context, effect, state, memo, callback etc.
-              using the Redux(toolkit) state handler, in units testing I used the basic way jest.
+              using the Redux(toolkit) state handler, in units testing I used the basic way Jest.
             </p>
             <p class="px-5 py-3 mb-0">
-              for different styles libraries such as Styled Components, Bootstrap and Tailwind.
+              For different styles libraries such as Styled Components, Bootstrap and Tailwind.
             </p>
             <p class="px-5 py-3 mb-0">
               I have also created simple APIs with node.js and express, I have used in SQL database, firebase, MongoDB,
@@ -451,11 +443,12 @@
 
           <div class="col section-car__section-4-col tager-spanish">
             <p class="px-5 py-3 mb-0">
-              Mi mayor habilidad es con React y sus respectivos hooks como el context,effect,state,memo, callback etc..
+              Mi mayor habilidad es con React y sus respectivos hooks como el context, effect, state, memo, callback
+              etc..
               usando el manejador de estados Redux(toolkit), en units testing he usado de manera basica jest.
             </p>
             <p class="px-5 py-3 mb-0">
-              para los estilos diferentes librerias como lo son Styled Compoents, Bootstrap y Tailwind.
+              para los estilos diferentes librerias como lo son Styled Components, Bootstrap y Tailwind.
             </p>
             <p class="px-5 py-3 mb-0">
               Tambien he creado APIS simples con node.js y express, he usado en base de datos SQL, firebase, MongoDB,
@@ -634,11 +627,10 @@
                   that already exist
                 </p>
                 <p class="text-center tager-spanish">
-                  Esta pagina es creada para poder hacer apuestas defutbol entre amigos y familiares
-                  elijiendo el marcador de los equipo o ganador
-                  puede crear tu usuario y comenzar creando un grupo con la competencia que este
-                  en el momento, luego con un codigo puede invitar a los demas, y unirte a grupos
-                  que ya existan
+                  Esta página está siendo creada para poder hacer apuestas de futbol entre amigos y familiares,
+                  eligiendo el marcador del equipo o el equipo ganador. Puedes crear tu usuario y comenzar creando un
+                  grupo con la competencia que este en el momento, luego con un código puedes invitar a los demás, y
+                  unirte a grupos que ya existan.
                 </p>
                 <a href="http://fzapataramirez-002-site3.gtempurl.com/" target="_blank">
                   <img src="/assets/projects/apuestaco.png" class="d-block w-100" alt="project page apuestaco">
@@ -663,9 +655,9 @@
                   of an image, faribese was used to persist the data of each
                 </p>
                 <p class="text-center tager-spanish">
-                  En este clone puedes logearte con la cuenta de google,
-                  puedes hacer comentarios, dar likes y hacer una publicacion
-                  de una imagen, se uso faribese para persistir la data de cada
+                  En este clone puedes loguearte con la cuenta de google, puedes hacer comentarios, dar likes y hacer
+                  una publicación de una imagen con su comentario. se usó Firebase para persistir la data de cada
+                  usuario.
                 </p>
                 <a href="https://facebook-clone-ivory.vercel.app/" target="_blank">
                   <img src="/assets/projects/facebook-clone.png" class="d-block w-100" alt="project facebook clone">
@@ -690,10 +682,8 @@
                   information
                 </p>
                 <p class="text-center tager-spanish">
-                  Este es una data table con paginacion creada sin libreria, con sus respectiva filtracion
-                  de datos y un CRUD para la lista de usuarios en la table , agregar un user, edit, delete adn view
-                  the
-                  info
+                  Este es una data table con paginación creada sin librería, con sus respectiva filtración de datos y un
+                  CRUD para la lista de usuarios en la tabla.
                 </p>
                 <a href="https://cromofuego.github.io/table-users/" target="_blank">
                   <img src="/assets/projects/table-user.png" class="d-block w-100" alt="project data table users">
