--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
           </div>
 
           <a class="card-header-a__button-cv card-header-a__button-cv__btn target-english" src="./assets/elkin-cv.pdf"
-            href="/assets/elkin-cv.d8898e81.pdf" download="elkin-cv.pdf">
+            href="/assets/elkin-cv.eb33e625.pdf" download="elkin-cv.pdf">
             <img src="./assets/elkin-cv.pdf" style="display: none;" class="src-pdf-file" />
             Download CV
           </a>
           <a class="card-header-a__button-cv card-header-a__button-cv__btn tager-spanish" src="./assets/elkin-cv.pdf"
-            href="/assets/elkin-cv.d8898e81.pdf" download="elkin-cv.pdf">
+            href="/assets/elkin-cv.eb33e625.pdf" download="elkin-cv.pdf">
             <img src="./assets/elkin-cv.pdf" style="display: none;" class="src-pdf-file" />
             Descargar HV
           </a>
@@ -619,7 +619,7 @@
                 <p class="text-center tager-spanish">Código no disponible
                 </p>
                 <p class="text-center target-english">
-                  This page was create to be able to make soccer bets between friends and family,
+                  This page is being built to be able to make soccer bets between friends and family,
                   choosing the score of the team or winner team
                   you can create your user and start creating a group with the competition that exist in that moment,
                   then
