solucion error carga img

--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
                   Landing page creada para la venta de boletos de un evento de speakers
                 </p>
                 <a href="https://cromofuego.github.io/landing-page/" target="_blank">
-                  <img src=" /assets/projects/landing-page.png" class="d-block w-100" alt="project lading page">
+                  <img src="./assets/projects/landing-page.png" class="d-block w-100" alt="project lading page">
                 </a>
               </div>
               <!-- Landing Page -->
